page spacing steps to correction About text added

--- a/src/App.css
+++ b/src/App.css
@@ -45,23 +45,16 @@
   display: flex;
  
   justify-content: center;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
   padding: 0 20px; 
- 
-  
   background-image: linear-gradient(black,#111D13);
   z-index: 2;
-
-
-
   padding-top: 200px;
   /* padding-left: 10%; */
   color:  #92e5a1;
   font-size: xx-large;
   margin: 0px;
-
-
   /* Full height */
   height: 100%;
 
@@ -82,4 +75,10 @@
 
 ::-webkit-scrollbar-thumb {
   background: #5cfc79;
+}
+
+.LandingPage{
+  align-self: flex-start;
+  padding-left: 300px;
+  padding-bottom: 100px;
 }
