--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,45 +1,30 @@
-.About{
-    padding-top: 800px;
+    .About{
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
-    justify-content: flex-start; 
-    padding: 200px; 
-    
-    max-height: 100vh;
-    max-width: 100vw; 
+    justify-content: center; 
+    align-items: center;
+
     z-index: 2; 
     
     font-size: large;  
     }
-    .LandingPage{
-        align-self: flex-start;
-        padding-left: 300px;
+    
+    .AboutTitle{
+        color:  #5cfc79;
     }
-
 
     .AboutCard{
-        padding: 20px;
-        margin: 20px;
-        height: 300px;
-        width: 350px;
-        background-color: rgba(0, 0, 0, 0.45);
+        height: 400px;
+        width: 1000px;
+        background-color: rgba(11, 9, 10, .5);
         display: flex;
+        justify-content: center;
         flex-direction: column; 
-        background-size: cover;
-        background-repeat: no-repeat;
-        transition: opacity .4s;
-    
-        opacity: 0.3;
-    }
-    .AboutCard:hover{
-        opacity: 100;
-    
-    }
-    
-    .PortfolioText{
-        display: flex;
-        flex-direction: column;    
+        text-align: center;
+        color: rgba(255, 255, 255, 0.7);
+
+        border-radius: 10px;
+        padding-bottom: 250px;
     }
     
     .AboutsContainer{
