--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -6,6 +6,7 @@
     color: #5cfc79;
     display: flex;
     justify-content: flex-start;
+   
 }
 .MainText{
     color: rgba(255, 255, 255, 0.7);
@@ -14,6 +15,7 @@
     color: rgba(255, 255, 255, 0.7);
     font-size: medium;
     max-width: 500px;
+    padding-bottom: 260px;
 
 } 
 
