--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -7,16 +7,14 @@
 }
 
 .Portfolio{
-padding-top: 800px;
 display: flex;
 flex-wrap: wrap;
 flex-direction: column;
 justify-content: center;
 align-items: center; 
-padding: 20px; 
+padding-top: 200px; 
 
-
-max-width: 100vw; 
+max-width: 100%; 
 z-index: 2; 
 
 font-size: large;  
@@ -54,13 +52,12 @@ font-size: large;
     padding: 0;
     border-radius: 10px;
     text-align: center;
-   
-}
-
-.ProjectsContainer{
-display: flex;
-flex-direction: column;
+    color: rgba(255, 255, 255, 0.7);
 }
 
 
+
+.ProjectTitle{
+    color:  #5cfc79;
+}
 
